# WeirdNotes

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/config/: auth.py  database.py
backend/src/exceptions/: account.py  base.py  handlers.py
backend/src/models/: account.py
backend/src/routers/: account.py
backend/src/schemas/: account.py
backend/src/services/: account.py  base.py
frontend/app/: .prettierrc.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/app/src/: app.html
frontend/app/src/hooks/: index.ts
frontend/app/src/lib/components/base/: Footer.svelte  Header.svelte  MainContainer.svelte  Sidebar.svelte  Snackbar.svelte
frontend/app/src/lib/constants/: api.ts  routes.ts
frontend/app/src/lib/services/: alert.ts  auth.ts  requests.ts  user.ts
frontend/app/src/lib/stores/: alert.ts  localStorageStore.ts  user.ts
frontend/app/src/lib/types/: alert.ts  sidebar.ts  user.ts
frontend/app/src/routes/: __layout.svelte  account.svelte  index.svelte
frontend/app/src/routes/auth/: __layout.reset.svelte
frontend/app/src/routes/auth/sign-in/: index.svelte
frontend/app/src/routes/auth/sign-up/: index.svelte
frontend/app/src/styles/: tailwind-output.css  tailwind.css
